2014-08-27  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/reporting/reporting_builder.php: Owner of a report can be delete it.
	Ticket #1199.

2014-08-27  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/groups/group_list.php: Fixed problem displaying empty 
	agents.

2014-08-26  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_clippy.php, include/styles/pandora.css: some
	aesthetic changes suggested by Carla.

2014-08-26  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/introjs.css, include/styles/pandora_black.css,
	include/styles/pandora.css, general/logon_ok.php,
	mobile/include/style/main.css: some aesthetic changes suggested by
	Carla.
	
	* include/help/clippy/godmode_agentes_modificar_agente.php: fixed
	the position of dialog.

2014-08-26  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/alerts/configure_alert_action.php,
	include/help/clippy/godmode_agentes_modificar_agente.php,
	include/help/clippy/homepage.php,
	include/help/clippy/module_unknow.php,
	include/help/clippy/godmode_agentes_configurar_agente.php,
	include/help/clippy/godmode_alerts_alert_actions.php,
	include/help/clippy/operation_agentes_ver_agente.php,
	include/help/clippy/godmode_alerts_configure_alert_action.php,
	include/help/clippy/operation_agentes_status_monitor.php,
	include/help/en/help_context_pandora_server_email.php,
	include/functions_clippy.php, operation/menu.php,
	operation/agentes/status_monitor.php: some changes suggested by
	Carla.

2014-08-25  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/setup_general.php: Improved timezone
	edition.

2014-08-25  Vanessa Gil <vanessa.gil@artica.es>

	* include/help/en/help_propagate_acl.php
	  include/help/es/help_propagate_acl.php: Added help.

2014-08-25  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/groups/group_list.php: Fixed bug listing
	group hierarchy.

2014-08-25  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/groups/configure_group.php
	  include/functions_tags.php