@@ -1,0 +1,25 @@
+<?php
+/**
+ * @package Include/help/ja
+ */
+?>
+
+<h1>ACL の伝播</h1>
+
+ACL の伝播は、メイングループのサブグループで ACL の定義をする必要がないようにするためのものです。以下に例を示します。
+<br><br>
+次のようなグループとサブグループの階層があるとします。
+<br><br>
+<pre> 
+   顧客
+     + 顧客 A
+     + 顧客 B
+     + 顧客 C
+     + 顧客 D
+</pre>
+<br><br>
+オペレータが顧客グループの顧客 A,B,C および D にアクセスできるようにしたい場合は、"顧客"グループで "ACLの伝播" をクリックします。これは、"顧客" グループにアクセスできるユーザは、同様にそのサブグループにもアクセスできるという意味になります。
+
+<h3>伝播とタグ</h3>
+
+伝播は、タグにも対応しています。つまり、サブグループのタグにも影響します。
